# package-tracker

./: BA_PACKAGE.cmake  BA_PACKAGE_DEPS.cmake  BA_PACKAGE_VARS.cmake  README.md  STORAGE.cmake
cmake_tests/: CMakeLists.txt  README.md  TEST.cmake  VARS.cmake  include_general.cmake
cmake_tests/BA_PACKAGE/: CMakeLists.txt
cmake_tests/BA_PACKAGE/archive_type_zip/: CMakeLists.txt
cmake_tests/BA_PACKAGE/cache_only_not_found_error/: CMakeLists.txt
cmake_tests/BA_PACKAGE/cache_only_skips_dependency/: CMakeLists.txt
cmake_tests/BA_PACKAGE/debug_keyword/: CMakeLists.txt
cmake_tests/BA_PACKAGE/debug_suffix_applied/: CMakeLists.txt
cmake_tests/BA_PACKAGE/empty_revision/: CMakeLists.txt
cmake_tests/BA_PACKAGE/escape_template_args_applied/: CMakeLists.txt
cmake_tests/BA_PACKAGE/escape_template_args_not_applied/: CMakeLists.txt
cmake_tests/BA_PACKAGE/git_path_template_args/: CMakeLists.txt
cmake_tests/BA_PACKAGE/invalid_package_name_error/: CMakeLists.txt
cmake_tests/BA_PACKAGE/no_debug_skips_keyword/: CMakeLists.txt
cmake_tests/BA_PACKAGE/no_git_args_without_template/: CMakeLists.txt
cmake_tests/BA_PACKAGE/output_var_set/: CMakeLists.txt
cmake_tests/BA_PACKAGE/package_name_dash_warning/: CMakeLists.txt
cmake_tests/BA_PACKAGE/release_basic/: CMakeLists.txt
cmake_tests/BA_PACKAGE_EXECUTABLE/: CMakeLists.txt
cmake_tests/BA_PACKAGE_EXECUTABLE/cache_only_forwarding/: CMakeLists.txt
cmake_tests/BA_PACKAGE_EXECUTABLE/cmake_prefix_path_updated/: CMakeLists.txt
cmake_tests/BA_PACKAGE_EXECUTABLE/debug_suffix/: CMakeLists.txt
cmake_tests/BA_PACKAGE_EXECUTABLE/no_debug_skips_suffix/: CMakeLists.txt
cmake_tests/BA_PACKAGE_EXECUTABLE/output_path_var_propagates/: CMakeLists.txt
cmake_tests/BA_PACKAGE_EXECUTABLE/release_basic/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/: CMakeLists.txt  include_general.cmake
cmake_tests/BA_PACKAGE_LIBRARY/cache_only_forwarding/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/cache_only_not_found_error/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/cache_only_skips_dependency/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/cmake_prefix_path_updated/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/debug_suffix/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/git_path_template_args/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/invalid_package_name_error/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/no_debug_skips_suffix/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/no_git_args_without_template/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/output_path_var_propagates/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/package_name_dash_warning/: CMakeLists.txt
cmake_tests/BA_PACKAGE_LIBRARY/release_basic/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/env_var_precedence/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/env_var_with_local_use_warning/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/escape_template_args_off_returned/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/escape_template_args_on_returned/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/git_archive_path_returned/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/git_archive_with_http_header_warning/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/http_header_returned/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/invalid_local_path/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/local_use_off/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/local_use_on/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/revision_with_local_warning/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/test_env_var_precedence/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/test_invalid_local_path/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/test_local_use_on/: CMakeLists.txt
cmake_tests/BA_PACKAGE_PREREQ_CMCONF_INIT/test_revision_with_local_warning/: CMakeLists.txt
cmake_tests/mock/: CMCONF.cmake  CMDEF_VARS.cmake  CMLIB_CACHE.cmake  CMLIB_DEPENDENCY.cmake  CMLIB_STORAGE.cmake  CMUTIL.cmake
cmake_tests/mock/test/: CMakeLists.txt
cmake_tests/mock/test/get_fails_on_undefined/: CMakeLists.txt
cmake_tests/mock/test/get_returns_value/: CMakeLists.txt
doc/: GlobalConfiguration.md  MigrationGuide.md
example/: CMLibStorage.cmake  CMakeLists.txt  README.md  main.cpp
example/config/: .gitignore  CMCONF_EXAMPLEConfig.cmake  credentials.cmake
helpers/: BA_PACKAGE_PREREQ.cmake
test/: README.md  run_app_tests.cmake  run_tests.sh  run_vars_test.cmake
test/app/: CMakeLists.txt  main.c
test/app/lib/shared_library_gst/: CMakeLists.txt  library.c
test/app/tests_list/: gstreamer_style_naming.txt  standard_install.txt  symlink_named_differently.txt  symlink_named_same_as_file.txt
