IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(BA_PACKAGE_EXECUTABLE_TEST)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")

TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/release_basic")
TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/debug_suffix")
TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/no_debug_skips_suffix")
TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/output_path_var_propagates")
TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/cmake_prefix_path_updated")
TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/cache_only_forwarding")

