##
# Test: ARCHIVE_TYPE=ZIP is passed to CMLIB_DEPENDENCY
#
# Verifies that BA_PACKAGE passes ARCHIVE_TYPE ZIP to CMLIB_DEPENDENCY.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_BA_PACKAGE_ARCHIVE_TYPE_ZIP)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")

BA_PACKAGE(mypkg v1.0.0 "" "" output_path)

TEST_VAR_TRUE(MOCK_CMLIB_DEPENDENCY_CALLED)
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_DEPENDENCY_ARCHIVE_TYPE "ZIP")

