##
# Test: Empty REVISION means no REVISION arg passed to template expansion
#
# Verifies that BA_PACKAGE does not pass REVISION to
# CMLIB_STORAGE_TEMPLATE_INSTANCE when REVISION is empty.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_BA_PACKAGE_EMPTY_REVISION)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")

BA_PACKAGE(mypkg v1.0.0 "" "" output_path)

TEST_VAR_TRUE(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_CALLED)
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_REVISION "")

