## ESCAPE_TEMPLATE_ARGS=OFF keeps "/" unchanged in template arguments
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_BA_PACKAGE_ESCAPE_TEMPLATE_ARGS_NOT_APPLIED)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "refs/heads/main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")
BA_PACKAGE_VARS_SET(ESCAPE_TEMPLATE_ARGS OFF)

BA_PACKAGE(mypkg v1.0.0 "" "" output_path)

TEST_VAR_TRUE(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_CALLED)
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_TEMPLATE_VALUE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_REVISION "refs/heads/main")
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_GIT_PATH "mock_distro/0.0.0/mock_arch")
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_PACKAGE_GROUP_NAME "mypkg")
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_ARCHIVE_NAME "mypkg_v1.0.0_mock_arch_mock_distro_0.0.0.zip")

