##
# Test: GIT_PATH_TEMPLATE defined passes GIT_REVISION and GIT_PATH to CMLIB_DEPENDENCY
#
# Verifies that when GIT_PATH_TEMPLATE is set, BA_PACKAGE passes
# GIT_REVISION and GIT_PATH arguments to CMLIB_DEPENDENCY for git-based downloads.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_BA_PACKAGE_GIT_PATH_TEMPLATE_ARGS)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

SET(MOCK_CMLIB_STORAGE_TEMPLATE_INSTANCE_OUTPUT "package/mock_distro/0.0.0/mock_arch/mypkg/mypkg_v1.0.0.zip" CACHE INTERNAL "")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "git@github.com:org/repo.git")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "package/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")

BA_PACKAGE(mypkg v1.0.0 "" "" output_path)

TEST_VAR_TRUE(MOCK_CMLIB_DEPENDENCY_CALLED)

IF(NOT MOCK_CMLIB_DEPENDENCY_GIT_REVISION)
    MESSAGE(FATAL_ERROR "GIT_REVISION should be set when GIT_PATH_TEMPLATE is defined")
ENDIF()

IF(NOT MOCK_CMLIB_DEPENDENCY_GIT_PATH)
    MESSAGE(FATAL_ERROR "GIT_PATH should be set when GIT_PATH_TEMPLATE is defined")
ENDIF()

