##
# Test: NO_DEBUG=ON suppresses DEBUG and RELEASE keywords
#
# Verifies that BA_PACKAGE with NO_DEBUG=ON does not add DEBUG or RELEASE
# keywords to CMLIB_DEPENDENCY even in Debug build mode.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_BA_PACKAGE_NO_DEBUG_SKIPS_KEYWORD)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Debug")
BA_PACKAGE_VARS_SET(REVISION "main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")

BA_PACKAGE(mypkg v1.0.0 "" "" output_path NO_DEBUG ON)

TEST_VAR_TRUE(MOCK_CMLIB_DEPENDENCY_CALLED)

LIST(FIND MOCK_CMLIB_DEPENDENCY_KEYWORDS "DEBUG" idx_debug)
IF(NOT idx_debug EQUAL -1)
    MESSAGE(FATAL_ERROR "KEYWORDS should NOT contain DEBUG when NO_DEBUG=ON: ${MOCK_CMLIB_DEPENDENCY_KEYWORDS}")
ENDIF()

LIST(FIND MOCK_CMLIB_DEPENDENCY_KEYWORDS "RELEASE" idx_release)
IF(NOT idx_release EQUAL -1)
    MESSAGE(FATAL_ERROR "KEYWORDS should NOT contain RELEASE when NO_DEBUG=ON: ${MOCK_CMLIB_DEPENDENCY_KEYWORDS}")
ENDIF()

