##
# Test: CACHE_ONLY=ON uses CMLIB_CACHE_GET instead of CMLIB_DEPENDENCY
#
# Verifies that BA_PACKAGE_LIBRARY with CACHE_ONLY=ON calls CMLIB_CACHE_GET
# to retrieve cached package and does not call CMLIB_DEPENDENCY.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_CACHE_ONLY_SKIPS_DEPENDENCY)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

SET(MOCK_CMLIB_CACHE_GET_RETURN_PATH "/mock/cached/path" CACHE INTERNAL "")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../include_general.cmake")
INCLUDE("${CMAKE_TESTS_ROOT}/mock/CMLIB_CACHE.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")

BA_PACKAGE_LIBRARY(mypkg v1.0.0 CACHE_ONLY ON)

TEST_VAR_TRUE(MOCK_CMLIB_CACHE_GET_CALLED)
TEST_VAR_FALSE(MOCK_CMLIB_DEPENDENCY_CALLED)

