##
# Test: Empty GIT_PATH_TEMPLATE does not pass GIT_REVISION/GIT_PATH
#
# Verifies that when GIT_PATH_TEMPLATE is empty, BA_PACKAGE_LIBRARY does not
# pass GIT_REVISION or GIT_PATH arguments to CMLIB_DEPENDENCY.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_NO_GIT_ARGS_WITHOUT_TEMPLATE)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")

BA_PACKAGE_LIBRARY(mypkg v1.0.0)

TEST_VAR_TRUE(MOCK_CMLIB_DEPENDENCY_CALLED)

IF(MOCK_CMLIB_DEPENDENCY_GIT_REVISION)
    MESSAGE(FATAL_ERROR "GIT_REVISION should NOT be set when GIT_PATH_TEMPLATE is empty: ${MOCK_CMLIB_DEPENDENCY_GIT_REVISION}")
ENDIF()

IF(MOCK_CMLIB_DEPENDENCY_GIT_PATH)
    MESSAGE(FATAL_ERROR "GIT_PATH should NOT be set when GIT_PATH_TEMPLATE is empty: ${MOCK_CMLIB_DEPENDENCY_GIT_PATH}")
ENDIF()

