##
# Test: OUTPUT_PATH_VAR returns the cached package path
#
# Verifies that BA_PACKAGE_LIBRARY with OUTPUT_PATH_VAR parameter sets the
# specified variable to the path returned by CMLIB_DEPENDENCY.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_OUTPUT_PATH_VAR_PROPAGATES)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")

BA_PACKAGE_LIBRARY(mypkg v1.0.0 OUTPUT_PATH_VAR my_output_path)

TEST_VAR_DEFINED(my_output_path)
TEST_VAR_EQUALS_LITERAL(my_output_path "/mock/cache/path")

