##
# Test: Release build calls CMLIB_DEPENDENCY with correct KEYWORDS and TYPE
#
# Verifies that BA_PACKAGE_LIBRARY in Release mode passes BACPACK, package name,
# and RELEASE keywords to CMLIB_DEPENDENCY with TYPE=ARCHIVE.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_RELEASE_BASIC)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../include_general.cmake")

SET(CMAKE_BUILD_TYPE "Release")
BA_PACKAGE_VARS_SET(REVISION "main")
BA_PACKAGE_VARS_SET(URI_TEMPLATE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
BA_PACKAGE_VARS_SET(GIT_PATH_TEMPLATE "")

BA_PACKAGE_LIBRARY(mypkg v1.0.0)

TEST_VAR_TRUE(MOCK_CMLIB_DEPENDENCY_CALLED)
TEST_VAR_EQUALS_LITERAL(MOCK_CMLIB_DEPENDENCY_TYPE "ARCHIVE")

LIST(FIND MOCK_CMLIB_DEPENDENCY_KEYWORDS "BACPACK" idx_bacpack)
LIST(FIND MOCK_CMLIB_DEPENDENCY_KEYWORDS "MYPKG" idx_pkg)
LIST(FIND MOCK_CMLIB_DEPENDENCY_KEYWORDS "RELEASE" idx_release)
IF(idx_bacpack EQUAL -1)
    MESSAGE(FATAL_ERROR "KEYWORDS missing BACPACK: ${MOCK_CMLIB_DEPENDENCY_KEYWORDS}")
ENDIF()
IF(idx_pkg EQUAL -1)
    MESSAGE(FATAL_ERROR "KEYWORDS missing MYPKG: ${MOCK_CMLIB_DEPENDENCY_KEYWORDS}")
ENDIF()
IF(idx_release EQUAL -1)
    MESSAGE(FATAL_ERROR "KEYWORDS missing RELEASE: ${MOCK_CMLIB_DEPENDENCY_KEYWORDS}")
ENDIF()

