## BA_PACKAGE_LOCAL_USE=OFF with TEMPLATE_ARGS_URI_ESCAPE=OFF returns OFF
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_ESCAPE_TEMPLATE_ARGS_OFF_RETURNED)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../VARS.cmake")
INCLUDE("${CMAKE_TESTS_ROOT}/TEST.cmake")

SET(TEST_CMCONF_BA_PACKAGE_LOCAL_USE OFF)
SET(TEST_CMCONF_BA_PACKAGE_HTTP_HEADER "Authorization: Bearer token/with/slashes")
SET(TEST_CMCONF_BA_PACKAGE_URI_REVISION "refs/heads/main")
SET(TEST_CMCONF_BA_PACKAGE_URI_TEMPLATE_REMOTE "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
SET(TEST_CMCONF_BA_PACKAGE_GIT_ARCHIVE_PATH_TEMPLATE "packages/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
SET(TEST_CMCONF_BA_PACKAGE_TEMPLATE_ARGS_URI_ESCAPE OFF)

INCLUDE("${CMAKE_TESTS_ROOT}/mock/CMCONF.cmake")
INCLUDE("${PACKAGER_PROJECT_ROOT}/helpers/BA_PACKAGE_PREREQ.cmake")

UNSET(ENV{BA_PACKAGE_LOCAL_PATH})

BA_PACKAGE_PREREQ_CMCONF_INIT(result_template result_revision result_git_archive_path result_http_header result_escape)

TEST_VAR_EQUALS_LITERAL(result_template "https://example.com/<REVISION>/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
TEST_VAR_EQUALS_LITERAL(result_revision "refs/heads/main")
TEST_VAR_EQUALS_LITERAL(result_git_archive_path "packages/<GIT_PATH>/<PACKAGE_GROUP_NAME>/<ARCHIVE_NAME>")
TEST_VAR_EQUALS_LITERAL(result_http_header "Authorization: Bearer token/with/slashes")
TEST_VAR_EQUALS_LITERAL(result_escape "OFF")

