## FATAL_ERROR when BA_PACKAGE_LOCAL_PATH points to non-existent directory
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_INVALID_LOCAL_PATH)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")

SET(TEST_CMCONF_BA_PACKAGE_LOCAL_USE ON)
SET(TEST_CMCONF_BA_PACKAGE_LOCAL_PATH "/nonexistent/invalid/path/that/does/not/exist")

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../mock/CMCONF.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../helpers/BA_PACKAGE_PREREQ.cmake")

UNSET(ENV{BA_PACKAGE_LOCAL_PATH})

BA_PACKAGE_PREREQ_CMCONF_INIT(result_template result_revision)

