## BA_PACKAGE_LOCAL_USE=OFF returns remote template and configured revision
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_LOCAL_USE_OFF)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")

SET(TEST_CMCONF_BA_PACKAGE_LOCAL_USE OFF)
SET(TEST_CMCONF_BA_PACKAGE_HTTP_AUTHORIZATION_HEADER "Bearer test-token")
SET(TEST_CMCONF_BA_PACKAGE_URI_REVISION "v1.0.0")
SET(TEST_CMCONF_BA_PACKAGE_URI_TEMPLATE_REMOTE "https://example.com/packages/<PACKAGE_NAME>")

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../mock/CMCONF.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../helpers/BA_PACKAGE_PREREQ.cmake")

UNSET(ENV{BA_PACKAGE_LOCAL_PATH})

BA_PACKAGE_PREREQ_CMCONF_INIT(result_template result_revision)

SET(expected_template "https://example.com/packages/<PACKAGE_NAME>")
TEST_VAR_EQUALS_LITERAL(result_template "${expected_template}")

SET(expected_revision "v1.0.0")
TEST_VAR_EQUALS_LITERAL(result_revision "${expected_revision}")

