## BA_PACKAGE_LOCAL_USE=OFF returns remote template and configured revision
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
    PROJECT(TEST_LOCAL_USE_OFF)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../VARS.cmake")
INCLUDE("${CMAKE_TESTS_ROOT}/TEST.cmake")

SET(TEST_CMCONF_BA_PACKAGE_LOCAL_USE OFF)
SET(TEST_CMCONF_BA_PACKAGE_HTTP_HEADER "")
SET(TEST_CMCONF_BA_PACKAGE_URI_REVISION "v1.0.0")
SET(TEST_CMCONF_BA_PACKAGE_URI_TEMPLATE_REMOTE "https://example.com/packages/<PACKAGE_NAME>")
SET(TEST_CMCONF_BA_PACKAGE_GIT_ARCHIVE_PATH_TEMPLATE "")
SET(TEST_CMCONF_BA_PACKAGE_TEMPLATE_ARGS_URI_ESCAPE OFF)

INCLUDE("${CMAKE_TESTS_ROOT}/mock/CMCONF.cmake")
INCLUDE("${PACKAGER_PROJECT_ROOT}/helpers/BA_PACKAGE_PREREQ.cmake")

UNSET(ENV{BA_PACKAGE_LOCAL_PATH})

BA_PACKAGE_PREREQ_CMCONF_INIT(result_template result_revision result_git_archive_path result_http_header result_escape)

TEST_VAR_EQUALS_LITERAL(result_template "https://example.com/packages/<PACKAGE_NAME>")
TEST_VAR_EQUALS_LITERAL(result_revision "v1.0.0")
TEST_VAR_EQUALS_LITERAL(result_git_archive_path "")
TEST_VAR_EQUALS_LITERAL(result_http_header "")
TEST_VAR_EQUALS_LITERAL(result_escape "OFF")

